
enum MatchResult {
	CAPTURE,
    CHECKMATE,
	EMPTY_SQUARE,
	INVALID;
}
