@startuml ChessPublicView_v2_0_2

	title Chess Public View v2.0.2

	class Chess {
		+play()
	}

	class Turn {
		+getCurrentPlayer()
		+change()
	}

	class Player {
		+boolean isWinner()
		+Color getColor()
		+void playTurn(Board)
	}

	enum Color {
		BLACK
		WHITE
	}

	class Board {
		-Square[8][8] squares
		+Board()
		+void show()
		+Square getSquare(Coordinate)
	}

	abstract class Piece {
		+Piece(Color)
		+Color getColor()
		+String getSimbol()
		+boolean isKing()
		+abstract boolean isValidMoveRule(Coordinate origin, Coordinate destination)
	}

	class Coordinate {
		+Coordinate(String coordinateText)
		+int getRowNumber()
		+int getColumNumber()
		+boolean hasVerticalDirectionWith(Coordinate)
		+boolean hasOneStepVerticalDirectionWith(Coordinate)
		+boolean hasHorizontalDirectionWith(Coordinate)
		+boolean hasOneStepHorizontalDirectionWith(Coordinate)
		+boolean hasDiagonalDirectionWith(Coordinate)
		+boolean hasOneStepDiagonalDirectionWith(Coordinate)
	}

	class Square {
		+Square(Coordinate)		
		+void clean()
		+void putPiece(Piece)
		+boolean isEmpty()
		+Piece getPiece()
		+boolean isValidMoveRuleForContainedPiece()
		+boolean containKing()
	}

	class Movement {
		+Movement(Coordinate origin, Coordinate destination)
		+MatchResult perform(Board, Color currentUserColor)
	}

	enum MatchResult {
		CAPTURE
		NOT_ALLOWED
		EMPTY_SQUARE
		CHECKMATE
	}

	class King extends Piece {
	}

	class Rook extends Piece {
	}

	class Queen extends Piece {
	}

	Chess *--> "1" Board
	Chess *--> Turn
	Turn *--> "2" Player
	Player o--> Color
	Piece o--> Color
	Piece ..> Coordinate
	Player ..> Coordinate
	Player ..> Movement
	Player --> Board
	Board *--> "64" Square
	Board *--> "32" Piece
	Square o--> "0..1" Piece
	Square *--> "1" Coordinate
	Movement *--> MatchResult
	Movement --> Board
	Movement --> Square
	Movement ..> Piece

@enduml